@@ -19,8 +19,21 @@
 package org.apache.maven.di.impl;
 
 import java.lang.annotation.Annotation;
-import java.lang.reflect.*;
-import java.util.*;
+import java.lang.reflect.AnnotatedElement;
+import java.lang.reflect.Constructor;
+import java.lang.reflect.Executable;
+import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Member;
+import java.lang.reflect.Method;
+import java.lang.reflect.Modifier;
+import java.lang.reflect.Parameter;
+import java.lang.reflect.Type;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashSet;
+import java.util.List;
 import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.Supplier;
@@ -28,7 +41,10 @@ import java.util.regex.Pattern;
 import java.util.stream.Stream;
 
 import org.apache.maven.api.annotations.Nullable;
-import org.apache.maven.api.di.*;
+import org.apache.maven.api.di.Inject;
+import org.apache.maven.api.di.Named;
+import org.apache.maven.api.di.Priority;
+import org.apache.maven.api.di.Qualifier;
 import org.apache.maven.di.Key;
 
 import static java.util.stream.Collectors.toList;
@@ -152,48 +168,18 @@ public final class ReflectionUtils {
     public static <T> @Nullable Binding<T> generateConstructorBinding(Key<T> key) {
         Class<?> cls = key.getRawType();
 
-        Annotation classInjectAnnotation = Stream.of(cls.getAnnotations())
-                .filter(a -> a.annotationType().isAnnotationPresent(Qualifier.class))
-                .findAny()
-                .orElse(null);
         List<Constructor<?>> constructors = Arrays.asList(cls.getDeclaredConstructors());
         List<Constructor<?>> injectConstructors = constructors.stream()
                 .filter(c -> c.isAnnotationPresent(Inject.class))
-                .collect(toList());
+                .toList();
 
         List<Method> factoryMethods = Arrays.stream(cls.getDeclaredMethods())
                 .filter(method -> method.getReturnType() == cls && Modifier.isStatic(method.getModifiers()))
-                .collect(toList());
+                .toList();
         List<Method> injectFactoryMethods = factoryMethods.stream()
                 .filter(method -> method.isAnnotationPresent(Inject.class))
-                .collect(toList());
+                .toList();
 
-        if (classInjectAnnotation != null) {
-            if (!injectConstructors.isEmpty()) {
-                throw failedImplicitBinding(key, "inject annotation on class with inject constructor");
-            }
-            if (!factoryMethods.isEmpty()) {
-                throw failedImplicitBinding(key, "inject annotation on class with factory method");
-            }
-            if (constructors.isEmpty()) {
-                throw failedImplicitBinding(key, "inject annotation on interface");
-            }
-            if (constructors.size() > 1) {
-                throw failedImplicitBinding(key, "inject annotation on class with multiple constructors");
-            }
-            Constructor<T> declaredConstructor =
-                    (Constructor<T>) constructors.iterator().next();
-
-            Class<?> enclosingClass = cls.getEnclosingClass();
-            if (enclosingClass != null
-                    && !Modifier.isStatic(cls.getModifiers())
-                    && declaredConstructor.getParameterCount() != 1) {
-                throw failedImplicitBinding(
-                        key,
-                        "inject annotation on local class that closes over outside variables and/or has no default constructor");
-            }
-            return bindingFromConstructor(key, declaredConstructor);
-        }
         if (!injectConstructors.isEmpty()) {
             if (injectConstructors.size() > 1) {
                 throw failedImplicitBinding(key, "more than one inject constructor");
@@ -211,7 +197,25 @@ public final class ReflectionUtils {
             }
             return bindingFromMethod(injectFactoryMethods.iterator().next());
         }
-        return null;
+
+        if (constructors.isEmpty()) {
+            throw failedImplicitBinding(key, "inject annotation on interface");
+        }
+        if (constructors.size() > 1) {
+            throw failedImplicitBinding(key, "inject annotation on class with multiple constructors");
+        }
+        Constructor<T> declaredConstructor =
+                (Constructor<T>) constructors.iterator().next();
+
+        Class<?> enclosingClass = cls.getEnclosingClass();
+        if (enclosingClass != null
+                && !Modifier.isStatic(cls.getModifiers())
+                && declaredConstructor.getParameterCount() != 1) {
+            throw failedImplicitBinding(
+                    key,
+                    "inject annotation on local class that closes over outside variables and/or has no default constructor");
+        }
+        return bindingFromConstructor(key, declaredConstructor);
     }
 
     private static DIException failedImplicitBinding(Key<?> requestedKey, String message) {
@@ -236,10 +240,12 @@ public final class ReflectionUtils {
     public static <T> BindingInitializer<T> fieldInjector(Key<T> container, Field field) {
         field.setAccessible(true);
         Key<Object> key = keyOf(container.getType(), field.getGenericType(), field);
-        return new BindingInitializer<T>(Collections.singleton(key)) {
+        boolean optional = field.isAnnotationPresent(Nullable.class);
+        Dependency<Object> dep = new Dependency<>(key, optional);
+        return new BindingInitializer<T>(Collections.singleton(dep)) {
             @Override
-            public Consumer<T> compile(Function<Key<?>, Supplier<?>> compiler) {
-                Supplier<?> binding = compiler.apply(key);
+            public Consumer<T> compile(Function<Dependency<?>, Supplier<?>> compiler) {
+                Supplier<?> binding = compiler.apply(dep);
                 return (T instance) -> {
                     Object arg = binding.get();
                     try {
@@ -254,10 +260,10 @@ public final class ReflectionUtils {
 
     public static <T> BindingInitializer<T> methodInjector(Key<T> container, Method method) {
         method.setAccessible(true);
-        Key<?>[] dependencies = toDependencies(container.getType(), method);
+        Dependency<?>[] dependencies = toDependencies(container.getType(), method);
         return new BindingInitializer<T>(new HashSet<>(Arrays.asList(dependencies))) {
             @Override
-            public Consumer<T> compile(Function<Key<?>, Supplier<?>> compiler) {
+            public Consumer<T> compile(Function<Dependency<?>, Supplier<?>> compiler) {
                 return instance -> {
                     Object[] args = getDependencies().stream()
                             .map(compiler)
@@ -275,35 +281,31 @@ public final class ReflectionUtils {
         };
     }
 
-    public static Key<?>[] toDependencies(@Nullable Type container, Executable executable) {
-        Key<?>[] keys = toArgDependencies(container, executable);
+    public static Dependency<?>[] toDependencies(@Nullable Type container, Executable executable) {
+        Dependency<?>[] keys = toArgDependencies(container, executable);
         if (executable instanceof Constructor || Modifier.isStatic(executable.getModifiers())) {
             return keys;
         } else {
-            Key<?>[] nkeys = new Key[keys.length + 1];
-            nkeys[0] = Key.ofType(container);
+            Dependency<?>[] nkeys = new Dependency[keys.length + 1];
+            nkeys[0] = new Dependency<>(Key.ofType(container), false);
             System.arraycopy(keys, 0, nkeys, 1, keys.length);
             return nkeys;
         }
     }
 
-    private static Key<?>[] toArgDependencies(@Nullable Type container, Executable executable) {
+    private static Dependency<?>[] toArgDependencies(@Nullable Type container, Executable executable) {
         Parameter[] parameters = executable.getParameters();
-        Key<?>[] dependencies = new Key<?>[parameters.length];
+        Dependency<?>[] dependencies = new Dependency<?>[parameters.length];
         if (parameters.length == 0) {
             return dependencies;
         }
 
-        Type type = parameters[0].getParameterizedType();
-        Parameter parameter = parameters[0];
-        dependencies[0] = keyOf(container, type, parameter);
-
         Type[] genericParameterTypes = executable.getGenericParameterTypes();
-        boolean hasImplicitDependency = genericParameterTypes.length != parameters.length;
-        for (int i = 1; i < dependencies.length; i++) {
-            type = genericParameterTypes[hasImplicitDependency ? i - 1 : i];
-            parameter = parameters[i];
-            dependencies[i] = keyOf(container, type, parameter);
+        for (int i = 0; i < dependencies.length; i++) {
+            Type type = genericParameterTypes[i];
+            Parameter parameter = parameters[i];
+            boolean optional = parameter.isAnnotationPresent(Nullable.class);
+            dependencies[i] = new Dependency<>(keyOf(container, type, parameter), optional);
         }
         return dependencies;
     }
@@ -312,6 +314,7 @@ public final class ReflectionUtils {
     public static <T> Binding<T> bindingFromMethod(Method method) {
         method.setAccessible(true);
         Binding<T> binding = Binding.to(
+                Key.ofType(method.getGenericReturnType(), ReflectionUtils.qualifierOf(method)),
                 args -> {
                     try {
                         Object instance;
@@ -348,9 +351,10 @@ public final class ReflectionUtils {
     public static <T> Binding<T> bindingFromConstructor(Key<T> key, Constructor<T> constructor) {
         constructor.setAccessible(true);
 
-        Key<?>[] dependencies = toDependencies(key.getType(), constructor);
+        Dependency<?>[] dependencies = toDependencies(key.getType(), constructor);
 
         Binding<T> binding = Binding.to(
+                key,
                 args -> {
                     try {
                         return constructor.newInstance(args);
